v1.0.2
    - Added notices.txt

v1.0.1
New Features:
    - Created a new method CreateCkoTestingToken to support for /create_cko_testing_token.
    - Created a new method RefundDebitCard to support for /refund_debit_card.
Enhancements:
    - Allowed provider and skipVerification new optional input in  /link_card.

v1.0.0-rc1
Hotfix:
     - Added support for /statements.


v1.0.0:
Breaking Changes
    - Removed support for deprecated .NET frameworks 4.6.1 and 4.6
Enhancements
    - Added support for .NET 5.0, 6.0, and 7.0
    - Upgraded Nethereum.Signer to 4.15.2
    - Upgraded coverlet.msbuild to 6.0.0
    - Upgraded Microsoft.NET.Test.Sdk to 17.6.3
    - Upgraded MSTest.TestAdapter to 3.1.1
    - Upgraded MSTest.TestFramework to 3.1.1
    - Upgraded coverlet.collector to 6.0.0
    - Upgraded BouncyCastle to 1.8.9

v0.2.51
New Features:
    - Created a new method ResendStatements to support for /statements/<statement_id>.
Enhancements:
    - Allowed statementsEnabled a new optional input in Wallet and added statements_enabled field to the response in /register_wallet.
    - Allowed statementsEnabled a new optional input and added statements_enabled field to the response in /update_wallet.
    - Added statements_enabled field to the response in /get_wallet.
    - Added statements_enabled field to the response in /get_wallets.
    - Allowed statementsEnabled a new optional input and added statements_enabled field to the response in /open_virtual_account.
    - Allowed statementsEnabled a new optional input and added statements_enabled field to the response in /update_virtual_account.
    - Added statements_enabled field to the response in /close_virtual_account.
    - Allowed provider a new input in /delete_card.
    - Upgraded Newtonsoft.Json version to 13.0.3
    - Upgraded Nethereum.Signer version to 4.0.0

v0.2.50
New Feature:
    - Created a new method GetWalletStatementData to support for /get_wallet_statement_data.