@@ -10,7 +10,7 @@
 		<Authors>Karlo Lorenzana;Jose Luis Morales Ruiz</Authors>
 		<Company>DigitalGeko</Company>
 		<Product>SilaSDK</Product>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<owners>Silamoney</owners>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -30,7 +30,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BouncyCastle" Version="1.8.9" />
+		<PackageReference Include="BouncyCastle.Cryptography" Version="2.4.0" />
 		<PackageReference Include="Nethereum.Signer" Version="4.18.0" />
 		<PackageReference Include="Microsoft.CSharp" VersionOption="4.6.0" Version="4.7.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
